--- a/products.html
+++ b/products.html
@@ -26,26 +26,21 @@
         </nav>
     </header>
 
-    <section class="section">
-        <h1>Our Products</h1>
-        <p>Explore our premium nail care products.</p>
-
-        <div class="product-grid">
-            <div class="product-item">
-                <img src="product1.jpg" alt="Product 1">
-                <h2>Luxury Nail Polish</h2>
-                <p>$15.99</p>
-            </div>
-            <div class="product-item">
-                <img src="product2.jpg" alt="Product 2">
-                <h2>Nail Care Kit</h2>
-                <p>$29.99</p>
-            </div>
-            <div class="product-item">
-                <img src="product3.jpg" alt="Product 3">
-                <h2>Cuticle Oil</h2>
-                <p>$9.99</p>
-            </div>
+    <section class="product-list">
+        <div class="product">
+            <h2>Alanas favorit nagellack</h2>
+            <img src="nailpng.png" alt="Product 1">
+            <p>300 SEK</p>
+        </div>
+        <div class="product">
+            <h2>Luxury Nail Polish</h2>
+            <img src="nailpng.png" alt="Product 2">
+            <p>300 SEK</p>
+        </div>
+        <div class="product">
+            <h2>Luxury Nail Polish</h2>
+            <img src="nailpng.png" alt="Product 3">
+            <p>300 SEK</p>
         </div>
     </section>
 
@@ -55,9 +50,9 @@
             <p>Rosé Ateljé is a modern nail salon focused on providing the best nail care experience.</p>
         </div>
         <div class="social-links">
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">Facebook</a>
+            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">TikTok</a>
         </div>
     </footer>
 
