--- a/book-now.html
+++ b/book-now.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
+        <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
         <nav>
-            <a href="index.html"><img src="logo.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
@@ -26,10 +26,13 @@
         </nav>
     </header>
 
-    <section class="section">
-        <h1>Book Your Appointment</h1>
-        <p>Click the link below to schedule your nail appointment.</p>
-        <a id="booking-link" href="#">Book Now (Link Coming Soon)</a>
+
+    <section class="section-list">
+        <div class="section">
+            <h1>Book Your Appointment</h1>
+            <p>Click the link below to schedule your nail appointment.</p>
+            <a id="booking-link" href="#">Book Now (Link Coming Soon)</a>
+        </div>
     </section>
 
     <footer>
