--- a/how-to.html
+++ b/how-to.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="logo.png" alt="Rosé Ateljé Logo" class="logo"></a>
+            <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
@@ -34,7 +34,7 @@
             <div class="video-item">
                 <h2>Perfect Manicure at Home</h2>
                 <video controls>
-                    <source src="example1.mp4" type="video/mp4">
+                    <source src="IMG_2238.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
