--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="logo.png" alt="Rosé Ateljé Logo" class="logo"></a>
+            <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
@@ -26,10 +26,12 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h1 data-lang="welcome">Welcome to Rosé Ateljé</h1>
-        <p data-lang="description">Experience luxury nail care like never before.</p>
-        <a href="book-now.html" class="btn" data-lang="bookNow">Book an Appointment</a>
+    <section class="section">
+        <div class="bajs">
+            <h1 data-lang="welcome">Welcome to Rosé Ateljé</h1>
+            <p data-lang="description">Experience luxury nail care like never before.</p>
+            <a href="book-now.html" class="btn" data-lang="bookNow">Book an Appointment</a>
+        </div>
     </section>
 
     <footer>
