--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="logo.png" alt="Rosé Ateljé Logo" class="logo"></a>
+            <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
