Added link to booking site

--- a/book-now.html
+++ b/book-now.html
@@ -31,7 +31,7 @@
         <div class="section">
             <h1>Book Your Appointment</h1>
             <p>Click the link below to schedule your nail appointment.</p>
-            <a id="booking-link" href="#">Book Now (Link Coming Soon)</a>
+            <a id="booking-link" href="https://www.bokadirekt.se/places/neas-skonhet-61255">BOKA TID</a>
         </div>
     </section>
 
