Updated paths and start page

--- a/webpages/how-to.html
+++ b/webpages/how-to.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How To's - Rosé Ateljé</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styling/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
+            <a href="index.html"><img src="../images/IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
@@ -34,7 +34,7 @@
             <div class="video-item">
                 <h2>Perfect Manicure at Home</h2>
                 <video controls>
-                    <source src="IMG_2238.mp4" type="video/mp4">
+                    <source src="../images/IMG_2238.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -55,13 +55,13 @@
             <p>Rosé Ateljé is a modern nail salon focused on providing the best nail care experience.</p>
         </div>
         <div class="social-links">
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">Facebook</a>
+            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">TikTok</a>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../backend/script.js"></script>
 </body>
 
 </html>
