--- a/webpages/book-now.html
+++ b/webpages/book-now.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Now - Rosé Ateljé</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styling/styles.css">
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
+        <a href="index.html"><img src="../images/IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
         <nav>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
@@ -41,9 +41,9 @@
             <p>Rosé Ateljé is a modern nail salon focused on providing the best nail care experience.</p>
         </div>
         <div class="social-links">
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">Facebook</a>
+            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">TikTok</a>
         </div>
     </footer>
 
