--- a/webpages/index.html
+++ b/webpages/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Rosé Ateljé</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styling/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
+            <a href="index.html"><img src="../images/IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
@@ -26,13 +26,20 @@
         </nav>
     </header>
 
-    <section class="section">
+    <!-- <section class="section">
         <div class="bajs">
             <h1 data-lang="welcome">Welcome to Rosé Ateljé</h1>
             <p data-lang="description">Experience luxury nail care like never before.</p>
             <a href="book-now.html" class="btn" data-lang="bookNow">Book an Appointment</a>
         </div>
+    </section> -->
+
+    <section class="hero">
+        <h1>Welcome to Rosé Ateljé</h1>
+        <p>Experience luxury nail care like never before.</p>
+        <a href="https://www.bokadirekt.se/places/neas-skonhet-61255" class="btn">Book an Appointment</a>
     </section>
+
 
     <footer>
         <div class="about-us">
@@ -40,13 +47,13 @@
             <p data-lang="aboutUsText">Rosé Ateljé is a modern nail salon focused on providing the best nail care experience.</p>
         </div>
         <div class="social-links">
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-            <a href="https://facebook.com" target="_blank">Facebook</a>
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">Facebook</a>
+            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">TikTok</a>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../backend/script.js"></script>
 </body>
 
 </html>
