--- a/webpages/products.html
+++ b/webpages/products.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Rosé Ateljé</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styling/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
+            <a href="index.html"><img src="../images/IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
@@ -29,17 +29,17 @@
     <section class="product-list">
         <div class="product">
             <h2>Alanas favorit nagellack</h2>
-            <img src="nailpng.png" alt="Product 1">
+            <img src="../images/nailpng.png" alt="Product 1">
             <p>300 SEK</p>
         </div>
         <div class="product">
             <h2>Luxury Nail Polish</h2>
-            <img src="nailpng.png" alt="Product 2">
+            <img src="../images/nailpng.png" alt="Product 2">
             <p>300 SEK</p>
         </div>
         <div class="product">
             <h2>Luxury Nail Polish</h2>
-            <img src="nailpng.png" alt="Product 3">
+            <img src="../images/nailpng.png" alt="Product 3">
             <p>300 SEK</p>
         </div>
     </section>
@@ -56,7 +56,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../backend/script.js"></script>
 </body>
 
 </html>
