New footer on each webpage

--- a/webpages/book-now.html
+++ b/webpages/book-now.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Now - Rosé Ateljé</title>
+    <title>About Us - Rosé Ateljé</title>
     <link rel="stylesheet" href="../styling/styles.css">
 </head>
 
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="book-now.html">Book Now</a></li>
+                <li><a href="book-now.html">About Us</a></li>
                 <li><a href="how-to.html">How To's</a></li>
                 <li><a href="faq.html">FAQ</a></li>
             </ul>
@@ -29,25 +29,29 @@
 
     <section class="section-list">
         <div class="section">
-            <h1>Book Your Appointment</h1>
-            <p>Click the link below to schedule your nail appointment.</p>
-            <a id="booking-link" href="https://www.bokadirekt.se/places/neas-skonhet-61255">BOKA TID</a>
+            <h1>About Us</h1>
+            <p>This is about us.</p>
         </div>
     </section>
 
     <footer>
-        <div class="about-us">
-            <h2>About Us</h2>
-            <p>Rosé Ateljé is a modern nail salon focused on providing the best nail care experience.</p>
+        <div class="contact-us">
+            <h3 data-lang="contact">CONTACT US</h3>
         </div>
         <div class="social-links">
-            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">Facebook</a>
-            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank" >
+                <img src="../images/instagram-icon.png" alt="Instagram" width="21" height="21" style="vertical-align: middle;"> Instagram
+            </a>
+            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">
+                <img src="../images/tiktok-icon.png" alt="TikTok" width="25" height="25" style="vertical-align: middle;"> TikTok
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">
+                <img src="../images/facebook-icon.png" alt="Facebook" width="22" height="22" style="vertical-align: middle;"> Facebook
+            </a>
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../backend/script.js"></script>
 </body>
 
 </html>
