--- a/webpages/index.html
+++ b/webpages/index.html
@@ -32,16 +32,20 @@
         <a href="https://www.bokadirekt.se/places/neas-skonhet-61255" class="btn">Book an Appointment</a>
     </section>
 
-
     <footer>
-        <div class="about-us">
-            <h2 data-lang="aboutUs">About Us</h2>
-            <p data-lang="aboutUsText">Rosé Ateljé is a modern nail salon focused on providing the best nail care experience.</p>
+        <div class="contact-us">
+            <h3 data-lang="contact">CONTACT US</h3>
         </div>
         <div class="social-links">
-            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">Facebook</a>
-            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/neasskonhet?igsh=MWNyZnVuZzc3NmxodQ%3D%3D" target="_blank" >
+                <img src="../images/instagram-icon.png" alt="Instagram" width="21" height="21" style="vertical-align: middle;"> Instagram
+            </a>
+            <a href="https://www.tiktok.com/@neasskonhet?_t=ZN-8v5YmslaYpa&_r=1" target="_blank">
+                <img src="../images/tiktok-icon.png" alt="TikTok" width="25" height="25" style="vertical-align: middle;"> TikTok
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61550295504120&mibextid=wwXIfr" target="_blank">
+                <img src="../images/facebook-icon.png" alt="Facebook" width="22" height="22" style="vertical-align: middle;"> Facebook
+            </a>
         </div>
     </footer>
 
