--- a/webpages/faq.html
+++ b/webpages/faq.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html" data-lang="home">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="book-now.html">Book Now</a></li>
+                <li><a href="about-us.html">About Us</a></li>
                 <li><a href="how-to.html">How To's</a></li>
                 <li><a href="faq.html">FAQ</a></li>
             </ul>
