--- a/webpages/about-us.html
+++ b/webpages/about-us.html
@@ -27,10 +27,14 @@
     </header>
 
 
-    <section class="section-list">
-        <div class="section">
+    <section class="about-us-section">
+        <div class="section-about-us">
             <h1>About Us</h1>
-            <p>This is about us.</p>
+            <p>Mitt namn är Linnea, Jag har arbetat med naglar, lash & browlift sedan jag blev certifierad 2023. Jag kan stolt säga att jag idag är Master utbildad i lashlift och browlift.
+
+               Du är alltid mitt största fokus, var inte rädd för att fråga eller be om något! Jag brinner verkligen för detta yrke och strävar alltid efter allt lära mig något nytt. Jag håller mig uppdaterad inom trendiga stilar och tekniker för att alltid ge kunden det lilla extra. Mitt mål är att erbjuda fler tjänster och i framtiden lära ut andra i detta fantastiska yrke, är så tacksam och stolt över det jag åstadkommit hittills.
+
+               Jag är utbildad inom naglar från Semilac och utbildad i lash & browlift av Vaidas lash academy. Master utbildad av Permalift. Hitta mig i socialamedier och spana in mitt arbete!</p>
         </div>
     </section>
 
