--- a/webpages/about-us.html
+++ b/webpages/about-us.html
@@ -13,11 +13,11 @@
         <a href="index.html"><img src="../images/IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
         <nav>
             <ul>
-                <li><a href="index.html" data-lang="home">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="how-to.html">How To's</a></li>
-                <li><a href="faq.html">FAQ</a></li>
+                <li><a data-lang="home" href="index.html">Home</a></li>
+                <li><a data-lang="products" href="products.html">Products</a></li>
+                <li><a data-lang="aboutUs" href="about-us.html">About Us</a></li>
+                <li><a data-lang="howTo" href="how-to.html">How To's</a></li>
+                <li><a data-lang="faq" href="faq.html">FAQ</a></li>
             </ul>
             <div class="language-switcher">
                 <button id="lang-sv">Svenska</button>
@@ -29,12 +29,8 @@
 
     <section class="about-us-section">
         <div class="section-about-us">
-            <h1>About Us</h1>
-            <p>Mitt namn är Linnea, Jag har arbetat med naglar, lash & browlift sedan jag blev certifierad 2023. Jag kan stolt säga att jag idag är Master utbildad i lashlift och browlift.
-
-               Du är alltid mitt största fokus, var inte rädd för att fråga eller be om något! Jag brinner verkligen för detta yrke och strävar alltid efter allt lära mig något nytt. Jag håller mig uppdaterad inom trendiga stilar och tekniker för att alltid ge kunden det lilla extra. Mitt mål är att erbjuda fler tjänster och i framtiden lära ut andra i detta fantastiska yrke, är så tacksam och stolt över det jag åstadkommit hittills.
-
-               Jag är utbildad inom naglar från Semilac och utbildad i lash & browlift av Vaidas lash academy. Master utbildad av Permalift. Hitta mig i socialamedier och spana in mitt arbete!</p>
+            <h1 data-lang="aboutUs">About Us</h1>
+            <p data-lang="aboutUsText">My name is Linnea. I have been working with nails, lash & brow lifts since I became certified in 2023. I can proudly say that I am now Master-certified in lash lifts and brow lifts. You are always my top priority – don’t hesitate to ask questions or request anything! I’m truly passionate about this profession and always strive to learn something new. I stay up to date with trendy styles and techniques to always give my clients that little extra. My goal is to offer more services and eventually teach others in this amazing profession. I am so grateful and proud of what I have accomplished so far. I am trained in nails by Semilac and certified in lash & brow lifts by Vaida’s Lash Academy. I received my Master certification from Permalift. Find me on social media and check out my work!</p>
         </div>
     </section>
 
