--- a/webpages/products.html
+++ b/webpages/products.html
@@ -13,11 +13,11 @@
         <nav>
             <a href="index.html"><img src="../images/IMG_7681.png" alt="Rosé Ateljé Logo" class="logo"></a>
             <ul>
-                <li><a href="index.html" data-lang="home">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="how-to.html">How To's</a></li>
-                <li><a href="faq.html">FAQ</a></li>
+                <li><a data-lang="home" href="index.html">Home</a></li>
+                <li><a data-lang="products" href="products.html">Products</a></li>
+                <li><a data-lang="aboutUs" href="about-us.html">About Us</a></li>
+                <li><a data-lang="howTo" href="how-to.html">How To's</a></li>
+                <li><a data-lang="faq" href="faq.html">FAQ</a></li>
             </ul>
             <div class="language-switcher">
                 <button id="lang-sv">Svenska</button>
