Added translation for book now question

--- a/webpages/faq.html
+++ b/webpages/faq.html
@@ -30,8 +30,8 @@
         <h1>Frequently Asked Questions</h1>
 
         <div class="faq-item">
-            <h2>How do I book an appointment?</h2>
-            <p>You can book an appointment through our <a href="book-now.html">Book Now</a> page.</p>
+            <h2 data-lang="bookFaq">How do I book an appointment?</h2>
+            <a data-lang="bookText" href="https://www.bokadirekt.se/places/neas-skonhet-61255">You can book an appointment here.</a>
         </div>
 
         <div class="faq-item">
