Removed old questions and added new

--- a/webpages/faq.html
+++ b/webpages/faq.html
@@ -35,13 +35,13 @@
         </div>
 
         <div class="faq-item">
-            <h2>What services do you offer?</h2>
-            <p>We offer a variety of nail services, including manicures, pedicures, and nail art.</p>
+            <h2>What should I do if I need to cancel or reschedule my appointment?</h2>
+            <p>Cancellations must be made 24 hours before the booked time otherwise you will be charged full price. You can reschedule your appointment by contacting us at least 24 hours in advance.</p>
         </div>
 
         <div class="faq-item">
             <h2>Can I reschedule my appointment?</h2>
-            <p>Yes, you can reschedule your appointment by contacting us at least 24 hours in advance.</p>
+            <p>hello</p>
         </div>
     </section>
 
